# rig

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/rig-adapter-claude/: Cargo.toml
crates/rig-adapter-claude/src/: command.rs  disabled.rs  frontmatter.rs  lib.rs  mcp.rs  rule.rs  skill.rs  subagent.rs
crates/rig-adapter-codex/: Cargo.toml
crates/rig-adapter-codex/src/: command.rs  disabled.rs  frontmatter.rs  lib.rs  mcp.rs  rule.rs  skill.rs  subagent.rs
crates/rig-api/: Cargo.toml
crates/rig-api/src/: lib.rs
crates/rig-cli/: Cargo.toml
crates/rig-cli/src/: main.rs  store.rs
crates/rig-core/: Cargo.toml
crates/rig-core/src/: adapter.rs  agent.rs  converter.rs  drift.rs  lib.rs  lockfile.rs  manifest.rs  scope.rs  source.rs
crates/rig-core/src/unit/: command.rs  hook.rs  mcp.rs  mod.rs  plugin.rs  rule.rs  skill.rs  subagent.rs
crates/rig-daemon/: Cargo.toml
crates/rig-daemon/src/: main.rs
crates/rig-fs/: Cargo.toml
crates/rig-fs/src/: lib.rs  pack.rs
crates/rig-gui/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
crates/rig-gui/src/: App.tsx  index.css  main.rs  main.tsx  types.ts
crates/rig-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/rig-gui/src-tauri/capabilities/: default.json
crates/rig-gui/src-tauri/src/: dto.rs  lib.rs  main.rs  state.rs  store.rs  sync.rs
crates/rig-gui/src/components/: DetailPane.tsx  DoctorView.tsx  DriftBadge.tsx  InstallModal.tsx  Pill.tsx  ProjectPicker.tsx  ScopePill.tsx  Sidebar.tsx  StatsView.tsx  SyncModal.tsx  TypeFilter.tsx  UnitTable.tsx
crates/rig-gui/src/lib/: api.ts  format.ts  project.ts  theme.tsx
crates/rig-gui/src/ui/: Badge.tsx  Button.tsx  Card.tsx  DriftBadge.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Pill.tsx  ThemeToggle.tsx  index.ts
crates/rig-legacy/: Cargo.toml
crates/rig-legacy/src/: installer.rs  lock.rs  main.rs  scanner.rs  skills.rs  store.rs
crates/rig-legacy/src/events/: project.rs
crates/rig-legacy/src/ui/: help.rs  mcp.rs  mod.rs  project.rs  skill_detail.rs  widgets.rs
crates/rig-plugin-host/: Cargo.toml
crates/rig-plugin-host/src/: lib.rs
crates/rig-source/: Cargo.toml
crates/rig-source/src/: lib.rs
crates/rig-sync/: Cargo.toml
crates/rig-sync/src/: lib.rs
docs/: DECISIONS.md  ENABLE-DISABLE-MV.md  MCP-SUPPORT.md  SESSION-START.md  THEME-SYSTEM.md  architecture.md  comparison.md  concepts.md  contributing.md  faq.md  governance.md  introduction.md  philosophy.md  roadmap.md  security.md  terms.md  vision.md
src/: app.rs  installer.rs  lock.rs  main.rs  mcp.rs  migrate.rs  scanner.rs  skills.rs  store.rs
src/events/: matrix.rs  mcp.rs  mod.rs
src/ui/: help.rs  matrix.rs  mod.rs  widgets.rs
