[package]
name = "rig"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for managing Claude AI skills and MCP servers"
license = "MIT"
authors = ["Dipendra Sharma"]
repository = "https://github.com/dipendra-sharma/rig"
homepage = "https://github.com/dipendra-sharma/rig"
keywords = ["cli", "tui", "ai", "mcp", "skills"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
shellexpand = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
