[package]
name = "rig-adapter-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Codex (OpenAI) adapter for Rig: translates canonical units into ~/.codex/ formats."

[dependencies]
rig-core = { workspace = true }
rig-fs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
