[package]
name = "rig-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Stable IPC contract between rig-daemon and frontends. JSON-RPC over stdio/unix socket."

[dependencies]
rig-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
