[package]
name = "rig-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Filesystem primitives for Rig: atomic writes, symlinks, path normalization, temp dirs."

[dependencies]
rig-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
