[package]
name = "rig-source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Source fetchers for Rig: GitHub, Git URL, npm, Claude marketplace, local paths."

[dependencies]
rig-core = { workspace = true }
rig-fs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
